[package]
name = "mini_redis"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
bytes = "1.6.0"
atoi="2.0.0"
tracing="0.1.40"
tokio-stream="0.1.15"
tracing-futures = { version = "0.2.5"}
tracing-subscriber = { version = "0.3.18" }
async-stream=" 0.3.5"
structopt = "0.3.26"