[package]
name = "mini_redis"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "mini-redis-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "mini-redis-server"
path = "src/bin/server.rs"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
bytes = "1.6.0"
atoi="2.0.0"
tracing="0.1.40"
tokio-stream="0.1.15"
tracing-futures = { version = "0.2.5"}
tracing-subscriber = { version = "0.3.18" }
async-stream=" 0.3.5"
structopt = "0.3.26"
clap = { version = "4.5.8", features = ["derive"] }